# espidf_freertos

./: .gitmodules  CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
components/esp_system/: startup.c
components/freertos/: CMakeLists.txt
components/freertos/FreeRTOS-Kernel/: tasks.c
src/: main.c
